# functional

./: .gitattributes  .gitignore  LICENSE  README.md
asm/: Makefile  (+4 more)
rustlang/: Cargo.toml  Makefile  README.md  config  rustfmt.toml
rustlang/atide/: Cargo.toml
rustlang/atide/src/: main.rs
rustlang/book/: Cargo.toml
rustlang/book/src/: lib.rs  main.rs
rustlang/book/src/asyncs/: greeting.rs
rustlang/bridgec/: Cargo.toml  Makefile  build.rs
rustlang/bridgec/src/: helloc.c
rustlang/bridgec/tests/: test-hello-c.rs
rustlang/docs/: Makefile  cls_1.8.hex  cls_11.hex  cls_12.hex  cls_13.hex  cls_14.hex  index.md
rustlang/example/: Cargo.toml
rustlang/example/src/: attributes.rs  comments.rs  conversion.rs  customtypes.rs  domain.rs  expression.rs  flow_control.rs  functions.rs  generics.rs  generics_associated_types.rs  lib.rs  mods.rs  primitives.rs  printfmt.rs  scope_rule.rs  threads.rs  types.rs  variable.rs
rustlang/flatbuf/: Cargo.toml
rustlang/flatbuf/src/: main.rs  model.fbs
rustlang/flatbuf/tests/: test_flatbuf.rs
rustlang/house/: Cargo.toml
rustlang/house/src/: client.rs  lib.rs  main.rs  se.rs  server.rs  world.rs
rustlang/house/tests/: mod.rs  test_se_index.rs
rustlang/jasm/: Cargo.toml  README.md
rustlang/jasm/src/: JavaCode.java  class_reader.rs  lib.rs  raw.rs
rustlang/middleware/postgresql/: Cargo.toml
rustlang/randroid/: Cargo.toml  Makefile  README.md  config
rustlang/randroid/randroidem/: build.gradle  local.properties  settings.gradle
rustlang/randroid/src/: lib.rs
rustlang/rios/: Cargo.toml  Makefile  README.md
rustlang/rios/rios.xcworkspace/: contents.xcworkspacedata
rustlang/rios/src/: lib.rs
rustlang/rok/: Cargo.toml  Makefile
rustlang/rok/src/: lib.rs  main.rs  model_generated.rs
rustlang/rok/tests/: test_flatbuf.rs
rustlang/tests/: mod.rs  test_conversion.rs  test_customtypes.rs  test_express_statement.rs  test_flow_control.rs  test_fmt_print.rs  test_functions.rs  test_generics.rs  test_generics_at.rs  test_mods.rs  test_primitives.rs  test_socket_client.rs  test_types.rs  test_variable.rs
(+520 files in other folders)
