[package]
name = "rustlang"
version = "0.1.0"
authors = ["yakirChen <iamyakirchen@outlook.com>"]
edition = "2018"

[lib]
name = "rustlang"

[workspace]
members = [
  "bridgec",
  "example",
  "book",
  "atide",
  "jasm",
  "rok",
  "rios",
  "randroid",
  "house",
  "middleware/postgresql",
]

[dependencies]
example = { path = "example" }
jasm = { path = "jasm" }
book = { path = "book" }
bridgec = { path = "bridgec" }
rok = { path = "rok" }

[profile.release]
lto = true
