[package]
name = "atide"
version = "0.1.0"
authors = ["yakirChen <iamyakirchen@outlook.com>"]
edition = "2018"

[dependencies]
tide = { git = "https://github.com/rustasync/tide", branch = "master" }
#tide = "0.2.0"
futures-preview = { version = "0.3.0-alpha.19", features = ["compat"] }
# tarpc = "0.18.0"
# tokio = "0.1"
