[package]
name = "house"
version = "0.1.0"
authors = ["yakirChen <iamyakirchen@outlook.com>"]
edition = "2018"

[dependencies]
tarpc = { version = "0.20.0", features = ["full"] }
futures = "0.3.1"
tokio = { version = "0.2.6", features = ["full"] }
clap = "2.33.0"
serde = "1.0.104"
env_logger = "0.7.1"
tokio-serde = { version="0.6.0", features = ["json"] }
tantivy = { git = "https://github.com/tantivy-search/tantivy", branch="master"}
tempdir = "0.3.7"

[lib]
name = "service"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"